--- a/zooworld.html
+++ b/zooworld.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoowrld_project</title>
+    <title>Document</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4;
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: white;
          } 
-         header { background-color: #333; color: white; padding: 10px 0; text-align: center; 
+         header { background-color: rgb(58, 142, 29); color: white; padding: 10px 0; text-align: center; 
         }
          nav ul { list-style-type: none; padding: 0;
          } 
@@ -17,17 +17,19 @@
          }
           main { padding: 20px; 
         } 
-        section { margin-bottom: 20px; padding: 20px; background-color: white; border: 1px solid #ddd; 
+        section { margin-bottom: 20px; padding: 20px; background-color: white border: 1px solid #ddd; 
         }
          .product { border-bottom: 1px solid #ddd; margin-bottom: 10px; padding-bottom: 10px; 
         } 
-        footer { background-color: #333; color: white; text-align: center; padding: 10px 0; position: fixed; width: 100%; bottom: 0; 
+        footer { background-color: rgb(58, 142, 29); color; color: white; text-align: center; padding: 10px 0; position: fixed; width: 100%; bottom: 0; 
+        }
+        .picture { display: flex; justify-content: center; align-items: center; height: 110 vh;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Добре дошли в нашия онлайн зоомагазин!</h1>
+        <h1>Добре дошли в "Zooworld"</h1>
          <nav>
             <ul>
                 <li><a href="#home">Начало</a></li>
@@ -36,7 +38,8 @@
                    <li><a href="#contact">Контакти</a></li> 
                </ul>
             </nav>
-   </header> 
+   </header>
+   <div class="picture"><img src="./images/care-8802281_1280.jpg" alt="pictures" width="400"></div>
    <main> <section id="home">
         <h2>Начало</h2> <p>Тук можете да намерите всичко необходимо за вашите домашни любимци.</p> </section>
          <section id="products">
