--- a/pages/zooworld.html
+++ b/pages/zooworld.html
@@ -39,7 +39,7 @@
                </ul>
             </nav>
    </header>
-   <div class="picture"><img src="./images/care-8802281_1280.jpg" alt="pictures" width="400"></div>
+   <div class="picture"><img src="../images/care-8802281_1280.jpg" alt="pictures" width="400"></div>
    <main> <section id="home">
         <h2>Начало</h2> <p>Тук можете да намерите всичко необходимо за вашите домашни любимци.</p> </section>
          <section id="products">
