--- a/pages/zooworld.html
+++ b/pages/zooworld.html
@@ -23,35 +23,37 @@
         } 
         footer { background-color: rgb(58, 142, 29); color; color: white; text-align: center; padding: 10px 0; position: fixed; width: 100%; bottom: 0; 
         }
-        .picture { display: flex; justify-content: center; align-items: center; height: 110 vh;
+        .picture { display: flex; justify-content:center; align-items: center; height: 110vh;
         }
     </style>
 </head>
 <body>
     <header>
+        <div class="paw"><img src="../images/paw-solid.svg" alt="paw-solid" width="60"></div>
         <h1>Добре дошли в "Zooworld"</h1>
          <nav>
             <ul>
                 <li><a href="#home">Начало</a></li>
                  <li><a href="#products">Продукти</a></li>
                   <li><a href="#about">За нас</a></li>
-                   <li><a href="#contact">Контакти</a></li> 
+                   <li><a href="#contact">Контакти</a></li>
                </ul>
             </nav>
    </header>
+   <div class="dog"><img src="../images/dog-solid.svg" alt="dog-solid" width="200"></div>
    <div class="picture"><img src="../images/care-8802281_1280.jpg" alt="pictures" width="400"></div>
    <main> <section id="home">
         <h2>Начало</h2> <p>Тук можете да намерите всичко необходимо за вашите домашни любимци.</p> </section>
          <section id="products">
-            <h2>Продукти</h2> 
+            <h2>Продукти</h2>
             <div class="product">
             <h3>Храна за кучета</h3>
-             <p>Висококачествена храна за кучета от водещи марки.</p> 
+             <p>Висококачествена храна за кучета от водещи марки.</p>
            </div> <div class="product"> <h3>Храна за котки</h3>
             <p>Най-добрата храна за котки, обичана от всички котки.</p>
-            </div> 
+            </div>
             <div class="product">
-            <h3>Играчки за домашни любимци</h3> 
+            <h3>Играчки за домашни любимци</h3>
             <p>Разнообразие от играчки, които ще донесат радост на вашите любимци.</p>
             </div> </section>
              <section id="about">
