--- a/pages/zooworld.html
+++ b/pages/zooworld.html
@@ -23,7 +23,7 @@
         } 
         footer { background-color: rgb(58, 142, 29); color; color: white; text-align: center; padding: 10px 0; position: fixed; width: 100%; bottom: 0; 
         }
-        .picture { display: flex; justify-content:center; align-items: center; height: 110vh;
+        .picture { display: flex; justify-content:center; align-items: center; height: 80vh;
         }
     </style>
 </head>
@@ -40,20 +40,19 @@
                </ul>
             </nav>
    </header>
-   <div class="dog"><img src="../images/dog-solid.svg" alt="dog-solid" width="200"></div>
    <div class="picture"><img src="../images/care-8802281_1280.jpg" alt="pictures" width="400"></div>
    <main> <section id="home">
         <h2>Начало</h2> <p>Тук можете да намерите всичко необходимо за вашите домашни любимци.</p> </section>
          <section id="products">
             <h2>Продукти</h2>
             <div class="product">
-            <h3>Храна за кучета</h3>
+            <h3>Храна за кучета <img src="../images/dog-solid.svg" alt="dog-solid" width="30"></h3>
              <p>Висококачествена храна за кучета от водещи марки.</p>
-           </div> <div class="product"> <h3>Храна за котки</h3>
+           </div> <div class="product"> <h3>Храна за котки <img src="../images/cat-solid.svg" alt="cat-solid" width="30"></h3>
             <p>Най-добрата храна за котки, обичана от всички котки.</p>
             </div>
             <div class="product">
-            <h3>Играчки за домашни любимци</h3>
+            <h3>Играчки за домашни любимци <img src="../images/bone-solid.svg" alt="bone-solid" width="30"></h3>
             <p>Разнообразие от играчки, които ще донесат радост на вашите любимци.</p>
             </div> </section>
              <section id="about">
