--- a/pages/zooworld.html
+++ b/pages/zooworld.html
@@ -17,7 +17,7 @@
          }
           main { padding: 20px; 
         } 
-        section { margin-bottom: 20px; padding: 20px; background-color: white border: 1px solid #ddd; 
+        section { margin-bottom: 20px; padding: 20px; background-color: white border 1px solid #ddd; 
         }
          .product { border-bottom: 1px solid #ddd; margin-bottom: 10px; padding-bottom: 10px; 
         } 
@@ -41,24 +41,33 @@
             </nav>
    </header>
    <div class="picture"><img src="../images/care-8802281_1280.jpg" alt="pictures" width="400"></div>
-   <main> <section id="home">
-        <h2>Начало</h2> <p>Тук можете да намерите всичко необходимо за вашите домашни любимци.</p> </section>
-         <section id="products">
+   <main>
+     <section id="home">
+        <h2>Начало</h2> <p>Тук можете да намерите всичко необходимо за вашите домашни любимци.</p>
+    </section>
+     <section id="products">
             <h2>Продукти</h2>
             <div class="product">
             <h3>Храна за кучета <img src="../images/dog-solid.svg" alt="dog-solid" width="30"></h3>
              <p>Висококачествена храна за кучета от водещи марки.</p>
-           </div> <div class="product"> <h3>Храна за котки <img src="../images/cat-solid.svg" alt="cat-solid" width="30"></h3>
+           </div>
+            <div class="product">
+                 <h3>Храна за котки <img src="../images/cat-solid.svg" alt="cat-solid" width="30"></h3>
             <p>Най-добрата храна за котки, обичана от всички котки.</p>
             </div>
             <div class="product">
             <h3>Играчки за домашни любимци <img src="../images/bone-solid.svg" alt="bone-solid" width="30"></h3>
             <p>Разнообразие от играчки, които ще донесат радост на вашите любимци.</p>
-            </div> </section>
-             <section id="about">
+            </div>
+        </section>
+         <section id="about">
             <h2>За нас</h2>
-             <p>Ние сме екип, посветен на грижата за вашите домашни любимци. Нашата мисия е да предложим най-доброто за тях.</p> </section> <section id="contact"> <h2>Контакти</h2>
-            <p>Свържете се с нас на email@example.com или на телефон 123-456-7890.</p> </section> </main> <footer>
+             <p>Ние сме екип, посветен на грижата за вашите домашни любимци. Нашата мисия е да предложим най-доброто за тях.</p> </section> <section id="contact">
+            <h2>Контакти</h2>
+            <p>Свържете се с нас на email@example.com или на телефон 123-456-7890.</p>
+        </section>
+        </main>
+            <footer>
             <p>&copy; 2024 Онлайн Зоомагазин. Всички права запазени.</p>
             </footer>
 </body>
