--- a/pages/demozoowrld.html
+++ b/pages/demozoowrld.html
@@ -98,6 +98,8 @@
        <section id="contact">
            <h2>Контакти</h2>
            <p>Свържете се с нас на email@example.com или на телефон 123-456-7890.</p>
+           <div class="map"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.1841996166505!2d24.61149731516704!3d42.146998079201565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40a8521b1fffb8c5%3A0xd8952c1a47c0adff!2sPleven%2C%20Bulgaria!5e0!3m2!1sen!2sus!4v1614800259164!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
+           </div>
        </section>
    </main>
    <footer>
