--- a/index.html/zoowrld.html
+++ b/index.html/zoowrld.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./zoowrld.html">zoowrld</a>
+    <a href="./pages/zooworldproject.html">Zooworld</a>
 </body>
 </html>
